[package]
name = "minesweeper-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.16"
nalgebra = "0.30.1"
rand = "0.8.5"
rayon = "1.5.2"
wasm-timer = "0.2.5"
